src/objects/PD_Library__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Description__c</fullName>
        <label>Additional Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Capstone_Official__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Capstone Official</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Classified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Classified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PD_Libraries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classified_On__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Classified On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cloned_from_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cloned from Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitive_Level__c</fullName>
        <label>Competitive Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Drug_Test__c</fullName>
        <label>Drug Test</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Position does not require drug test (L)</fullName>
                </value>
                <value>
                    <fullName>Position requires drug test (D)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FLSA__c</fullName>
        <label>FLSA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Non-Exempt</fullName>
                </value>
                <value>
                    <fullName>See Text Below</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FPL__c</fullName>
        <label>FPL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Statement__c</fullName>
        <label>Financial Statement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>OGE-278</fullName>
                </value>
                <value>
                    <fullName>OGE-450</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                </value>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hide_Obsolete_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a hidden field. When users select &quot;PD Status&quot; value as &quot;Obsolete&quot; or &quot;Historical Obsolete&quot;, &quot;Hide Obsolete Record&quot; field will become true &amp; vice versa.</description>
        <label>Hide Obsolete Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>I_A__c</fullName>
        <label>I/A</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Job_Analysis_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To determine if there is an attachment for Job Analysis. Check if attached. Uncheck if there is no attachment.</inlineHelpText>
        <label>Job Analysis Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Analysis_Number__c</fullName>
        <label>Vacancy Announcement Number</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <inlineHelpText>Enter keywords to search the PD</inlineHelpText>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Classified_By__c</fullName>
        <label>Legacy - Classified By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occupational_Category_Code__c</fullName>
        <label>Occupational Category Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blue Collar (B)</fullName>
                </value>
                <value>
                    <fullName>Professional (P)</fullName>
                </value>
                <value>
                    <fullName>Administrative (A)</fullName>
                </value>
                <value>
                    <fullName>Technical (T)</fullName>
                </value>
                <value>
                    <fullName>Clerical (C)</fullName>
                </value>
                <value>
                    <fullName>Other White Collar (O)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PD_Number__c</fullName>
        <label>PD Number</label>
        <length>7</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PD_Status__c</fullName>
        <label>PD Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Obsolete</fullName>
                </value>
                <value>
                    <fullName>Historical Obsolete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PD_Template__c</fullName>
        <label>Standard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Master</fullName>
                </value>
                <value>
                    <fullName>Regional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pay_Plan__c</fullName>
        <label>Pay Plan</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Sensitivity__c</fullName>
        <label>Position Sensitivity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non Designated</fullName>
                </value>
                <value>
                    <fullName>Non-sensitive (1)</fullName>
                </value>
                <value>
                    <fullName>Non Critical Sensitive (2)</fullName>
                </value>
                <value>
                    <fullName>Critical Sensitive (3)</fullName>
                </value>
                <value>
                    <fullName>Special Sensitive (4)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Status__c</fullName>
        <label>Position Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitive Service (1)</fullName>
                </value>
                <value>
                    <fullName>Excepted Service (2)</fullName>
                </value>
                <value>
                    <fullName>SES General</fullName>
                </value>
                <value>
                    <fullName>SES Career Reserved</fullName>
                </value>
                <value>
                    <fullName>Judicial DC Courts</fullName>
                </value>
                <value>
                    <fullName>Career DC Courts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position_Title__c</fullName>
        <label>Position Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Public_Trust_Indicator__c</fullName>
        <label>Public Trust Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1 - Low Risk (1)</fullName>
                </value>
                <value>
                    <fullName>Level 5 - Moderate Risk (5)</fullName>
                </value>
                <value>
                    <fullName>Level 6 - High Risk (6)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regions__c</fullName>
        <label>Servicing HR Office</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Central Office</fullName>
                </value>
                <value>
                    <fullName>Executive Resources</fullName>
                </value>
                <value>
                    <fullName>National Capital Region</fullName>
                </value>
                <value>
                    <fullName>Office of Inspector General</fullName>
                </value>
                <value>
                    <fullName>Region 01</fullName>
                </value>
                <value>
                    <fullName>Region 02</fullName>
                </value>
                <value>
                    <fullName>Region 03</fullName>
                </value>
                <value>
                    <fullName>Region 04</fullName>
                </value>
                <value>
                    <fullName>Region 05</fullName>
                </value>
                <value>
                    <fullName>Region 06</fullName>
                </value>
                <value>
                    <fullName>Region 07</fullName>
                </value>
                <value>
                    <fullName>Region 08</fullName>
                </value>
                <value>
                    <fullName>Region 09</fullName>
                </value>
                <value>
                    <fullName>Region 10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>Series</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service/Staff Office/Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Regions__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>CAO</fullName>
                </value>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>CHCO</fullName>
                </value>
                <value>
                    <fullName>CIO</fullName>
                </value>
                <value>
                    <fullName>Citizen Service &amp; Innovative Technologies</fullName>
                </value>
                <value>
                    <fullName>Citizen Services and Communications</fullName>
                </value>
                <value>
                    <fullName>Civilian Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>Civil Rights</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Communications &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Congressional/Intergovernmental Affairs</fullName>
                </value>
                <value>
                    <fullName>CO Standard</fullName>
                </value>
                <value>
                    <fullName>CPC</fullName>
                </value>
                <value>
                    <fullName>CPO</fullName>
                </value>
                <value>
                    <fullName>Department of Homeland Security</fullName>
                </value>
                <value>
                    <fullName>Executive Resources</fullName>
                </value>
                <value>
                    <fullName>FAS</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Financial Systems</fullName>
                </value>
                <value>
                    <fullName>FSC</fullName>
                </value>
                <value>
                    <fullName>FSS</fullName>
                </value>
                <value>
                    <fullName>FTS</fullName>
                </value>
                <value>
                    <fullName>LEGAL</fullName>
                </value>
                <value>
                    <fullName>-None-</fullName>
                </value>
                <value>
                    <fullName>OAD</fullName>
                </value>
                <value>
                    <fullName>OCFO</fullName>
                </value>
                <value>
                    <fullName>OCP</fullName>
                </value>
                <value>
                    <fullName>OCS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supervisory_Status__c</fullName>
        <label>Supervisory Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Supervisor or Manager (2)</fullName>
                </value>
                <value>
                    <fullName>Supervisor CSRA (4)</fullName>
                </value>
                <value>
                    <fullName>Management Official CSRA (5)</fullName>
                </value>
                <value>
                    <fullName>Leader (6)</fullName>
                </value>
                <value>
                    <fullName>Team Leader (7)</fullName>
                </value>
                <value>
                    <fullName>Non-supervisory (8)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PD</label>
    <listViews>
        <fullName>By_Grade</fullName>
        <columns>NAME</columns>
        <columns>Grade__c</columns>
        <columns>Pay_Plan__c</columns>
        <columns>Series__c</columns>
        <columns>Position_Title__c</columns>
        <columns>PD_Number__c</columns>
        <columns>Service__c</columns>
        <columns>Master__c</columns>
        <columns>Job_Analysis_Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PD_Template__c</field>
            <operation>equals</operation>
            <value>Regional,Master</value>
        </filters>
        <label>By Grade</label>
    </listViews>
    <listViews>
        <fullName>By_PD</fullName>
        <columns>NAME</columns>
        <columns>PD_Number__c</columns>
        <columns>Pay_Plan__c</columns>
        <columns>Series__c</columns>
        <columns>Grade__c</columns>
        <columns>Position_Title__c</columns>
        <columns>Service__c</columns>
        <columns>Master__c</columns>
        <columns>Job_Analysis_Attachment__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PD_Template__c</field>
            <operation>equals</operation>
            <value>Regional,Master</value>
        </filters>
        <label>By PD #</label>
    </listViews>
    <listViews>
        <fullName>By_Position</fullName>
        <columns>NAME</columns>
        <columns>Position_Status__c</columns>
        <columns>Pay_Plan__c</columns>
        <columns>Series__c</columns>
        <columns>Grade__c</columns>
        <columns>Position_Title__c</columns>
        <columns>PD_Number__c</columns>
        <columns>Service__c</columns>
        <columns>Master__c</columns>
        <columns>Job_Analysis_Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PD_Template__c</field>
            <operation>equals</operation>
            <value>Regional,Master</value>
        </filters>
        <label>By Position</label>
    </listViews>
    <listViews>
        <fullName>By_Series</fullName>
        <columns>NAME</columns>
        <columns>Series__c</columns>
        <columns>Pay_Plan__c</columns>
        <columns>Grade__c</columns>
        <columns>Position_Title__c</columns>
        <columns>PD_Number__c</columns>
        <columns>Service__c</columns>
        <columns>Master__c</columns>
        <columns>Job_Analysis_Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PD_Template__c</field>
            <operation>equals</operation>
            <value>Master,Regional</value>
        </filters>
        <label>By Series</label>
    </listViews>
    <listViews>
        <fullName>By_Service</fullName>
        <columns>NAME</columns>
        <columns>Service__c</columns>
        <columns>Pay_Plan__c</columns>
        <columns>Grade__c</columns>
        <columns>Series__c</columns>
        <columns>Position_Title__c</columns>
        <columns>PD_Number__c</columns>
        <columns>Job_Analysis_Attachment__c</columns>
        <columns>Master__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PD_Template__c</field>
            <operation>equals</operation>
            <value>Regional</value>
        </filters>
        <label>By Service</label>
    </listViews>
    <listViews>
        <fullName>Central_Office</fullName>
        <columns>NAME</columns>
        <columns>Pay_Plan__c</columns>
        <columns>Series__c</columns>
        <columns>Grade__c</columns>
        <columns>Position_Title__c</columns>
        <columns>PD_Number__c</columns>
        <columns>Service__c</columns>
        <columns>Job_Analysis_Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PD_Template__c</field>
            <operation>equals</operation>
            <value>Regional</value>
        </filters>
        <filters>
            <field>Regions__c</field>
            <operation>equals</operation>
            <value>Central Office</value>
        </filters>
        <label>Central Office</label>
    </listViews>
    <listViews>
        <fullName>Executive_Resources</fullName>
        <columns>NAME</columns>
        <columns>Pay_Plan__c</columns>
        <columns>Series__c</columns>
        <columns>Grade__c</columns>
        <columns>Position_Title__c</columns>
        <columns>PD_Number__c</columns>
        <columns>Service__c</columns>
        <columns>Job_Analysis_Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PD_Template__c</field>
            <operation>equals</operation>
            <value>Regional</value>
        </filters>
        <filters>
            <field>Regions__c</field>
            <operation>equals</operation>
            <value>Executive Resources</value>
        </filters>
        <label>Executive Resources</label>
    </listViews>
    <listViews>
        <fullName>Master_PDs_View</fullName>
        <columns>NAME</columns>
        <columns>Pay_Plan__c</columns>
        <columns>Series__c</columns>
        <columns>Grade__c</columns>
        <columns>Position_Title__c</columns>
        <columns>PD_Number__c</columns>
        <columns>Master__c</columns>
        <columns>Job_Analysis_Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Master__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PD_Template__c</field>
            <operation>equals</operation>
            <value>Master</value>
        </filters>
        <label>Master PDs View</label>
    </listViews>
    <listViews>
        <fullName>National_Capital_Region</fullName>
        <columns>NAME</columns>
        <columns>Pay_Plan__c</columns>
        <columns>Series__c</columns>
        <columns>Grade__c</columns>
        <columns>Position_Title__c</columns>
        <columns>PD_Number__c</columns>
        <columns>Service__c</columns>
        <columns>Job_Analysis_Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PD_Template__c</field>
            <operation>equals</operation>
            <value>Regional</value>
        </filters>
        <filters>
            <field>Regions__c</field>
            <operation>equals</operation>
            <value>National Capital Region</value>
        </filters>
        <label>National Capital Region</label>
    </listViews>
    <listViews>
        <fullName>Office_of_the_Inspector_General</fullName>
        <columns>NAME</columns>
        <columns>Pay_Plan__c</columns>
        <columns>Series__c</columns>
        <columns>Grade__c</columns>
        <columns>Position_Title__c</columns>
        <columns>PD_Number__c</columns>
        <columns>Service__c</columns>
        <columns>Job_Analysis_Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PD_Template__c</field>
            <operation>equals</operation>
            <value>Regional</value>
        </filters>
        <filters>
            <field>Regions__c</field>
            <operation>equals</operation>
            <value>Office of Inspector General</value>
        </filters>
        <label>Office of the Inspector General</label>
    </listViews>
    <listViews>
        <fullName>Region_1</fullName>
        <columns>NAME</columns>
        <columns>Pay_Plan__c</columns>
        <columns>Grade__c</columns>
        <columns>Series__c</columns>
        <columns>Position_Title__c</columns>
        <columns>PD_Number__c</columns>
        <columns>Service__c</columns>
        <columns>Job_Analysis_Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PD_Template__c</field>
            <operation>equals</operation>
            <value>Regional</value>
        </filters>
        <filters>
            <field>Regions__c</field>
            <operation>equals</operation>
            <value>Region 01</value>
        </filters>
        <label>Region 1</label>
    </listViews>
    <listViews>
        <fullName>Region_10</fullName>
        <columns>NAME</columns>
        <columns>Pay_Plan__c</columns>
        <columns>Series__c</columns>
        <columns>Grade__c</columns>
        <columns>Position_Title__c</columns>
        <columns>PD_Number__c</columns>
        <columns>Service__c</columns>
        <columns>Job_Analysis_Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PD_Template__c</field>
            <operation>equals</operation>
            <value>Regional</value>
        </filters>
        <filters>
            <field>Regions__c</field>
            <operation>equals</operation>
            <value>Region 10</value>
        </filters>
        <label>Region 10</label>
    </listViews>
    <listViews>
        <fullName>Region_2</fullName>
        <columns>NAME</columns>
        <columns>Pay_Plan__c</columns>
        <columns>Grade__c</columns>
        <columns>Series__c</columns>
        <columns>Position_Title__c</columns>
        <columns>PD_Number__c</columns>
        <columns>Service__c</columns>
        <columns>Job_Analysis_Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PD_Template__c</field>
            <operation>equals</operation>
            <value>Regional</value>
        </filters>
        <filters>
            <field>Regions__c</field>
            <operation>equals</operation>
            <value>Region 02</value>
        </filters>
        <label>Region 2</label>
    </listViews>
    <listViews>
        <fullName>Region_3</fullName>
        <columns>NAME</columns>
        <columns>Pay_Plan__c</columns>
        <columns>Series__c</columns>
        <columns>Grade__c</columns>
        <columns>Position_Title__c</columns>
        <columns>PD_Number__c</columns>
        <columns>Service__c</columns>
        <columns>Job_Analysis_Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PD_Template__c</field>
            <operation>equals</operation>
            <value>Regional</value>
        </filters>
        <filters>
            <field>Regions__c</field>
            <operation>equals</operation>
            <value>Region 03</value>
        </filters>
        <label>Region 3</label>
    </listViews>
    <listViews>
        <fullName>Region_4</fullName>
        <columns>NAME</columns>
        <columns>Pay_Plan__c</columns>
        <columns>Series__c</columns>
        <columns>Grade__c</columns>
        <columns>Position_Title__c</columns>
        <columns>PD_Number__c</columns>
        <columns>Service__c</columns>
        <columns>Job_Analysis_Attachment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PD_Template__c</field>
            <operation>equals</operation>
            <value>Regional</value>
        </filters>
        <filters>
            <field>Regions__c</field>
            <operation>equals</operation>
            <value>Region 04</value>
        </filters>
        <label>Region 4</label>
    </listViews>
    <nameField>
        <displayFormat>PD-{00000}</displayFormat>
        <label>PD Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PD</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PD_Cannot_Check_Master_when_Regional</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Master__c =TRUE &amp;&amp;  Cloned_from_Master__c =TRUE &amp;&amp;   ISPICKVAL(PD_Template__c , &apos;Regional&apos;) , TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Please do not check Master, when PD is Regional</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PD_Checking_Is_New_Regional_PD</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Master__c =FALSE &amp;&amp;  Cloned_from_Master__c =TRUE,TRUE, FALSE)  &amp;&amp;( NOT ISPICKVAL(  Service__c ,&quot;&quot;) )</errorConditionFormula>
        <errorMessage>Please do not check cloned from Master.  (OR) Please do not select Service. If you are creating  a New Regional PD</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PD_FPL_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( Master__c == FALSE, TRUE, FALSE) &amp;&amp; ( FPL__c  = &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>FPL__c</errorDisplayField>
        <errorMessage>Please enter FPL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PD_FPL_Validation_Cloned</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
(Master__c = TRUE),(Cloned_from_Master__c = TRUE) &amp;&amp; ( FPL__c = &quot;&quot;) 
)</errorConditionFormula>
        <errorDisplayField>FPL__c</errorDisplayField>
        <errorMessage>Please enter FPL</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PD_New_Region_PD_Number_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF(LEN (PD_Number__c) &lt;&gt; 7, TRUE, FALSE) &amp;&amp; (Master__c == FALSE)</errorConditionFormula>
        <errorDisplayField>PD_Number__c</errorDisplayField>
        <errorMessage>Please Enter 7 letter PD Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PD_New_Region_PD_Region_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
             (Master__c == FALSE) &amp;&amp;  ( Cloned_from_Master__c  == FALSE) &amp;&amp; (ISPICKVAL( Regions__c ,&quot;&quot;) ) 
        )</errorConditionFormula>
        <errorDisplayField>Regions__c</errorDisplayField>
        <errorMessage>Please select a Region</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PD_New_Region_PD_Service_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
             ( Master__c == FALSE) &amp;&amp; ( Cloned_from_Master__c  == FALSE)&amp;&amp;(ISPICKVAL(  Service__c  ,&quot;&quot;) ) 
        )</errorConditionFormula>
        <errorDisplayField>Service__c</errorDisplayField>
        <errorMessage>Please select a Service</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PD_New_Regional_PD_Not_from_Cloned</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
           (Cloned_from_Master__c == TRUE) &amp;&amp; ISPICKVAL( PD_Template__c, &quot;&quot;) &amp;&amp; ( Master__c == FALSE) &amp;&amp; ISPICKVAL( PD_Template__c, &quot;Master&quot;)
         
)</errorConditionFormula>
        <errorMessage>Not a valid scenario. Please uncheck Cloned from Master</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PD_Not_Service_Validation_for_Cloned_PD</fullName>
        <active>true</active>
        <description>When creating a Cloned Master PD</description>
        <errorConditionFormula>AND(
          (Master__c = TRUE),(Cloned_from_Master__c = TRUE) &amp;&amp;  ( NOT ISPICKVAL(  Service__c  ,&quot;&quot;) )
)</errorConditionFormula>
        <errorDisplayField>Service__c</errorDisplayField>
        <errorMessage>Regional PD copied from Master, please do not  select a Service</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PD_Number_Validation_for_Cloned_PD</fullName>
        <active>true</active>
        <description>When creating a Cloned Master PD</description>
        <errorConditionFormula>AND(
          (Master__c = TRUE),(Cloned_from_Master__c = TRUE) &amp;&amp;  IF( LEN( PD_Number__c ) &lt;&gt;7, TRUE,FALSE)  
)</errorConditionFormula>
        <errorDisplayField>PD_Number__c</errorDisplayField>
        <errorMessage>Regional PD copied from Master, please enter only 7 characters in PD Number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PD_Number_Validation_for_Cloned_PD_Edit</fullName>
        <active>true</active>
        <description>When creating a Cloned Master PD</description>
        <errorConditionFormula>AND(
          (Master__c = FALSE),(Cloned_from_Master__c = TRUE) &amp;&amp;  ISPICKVAL(Regions__c, &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Regions__c</errorDisplayField>
        <errorMessage>Please select a Region</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PD_Number_Validation_for_Master_PD</fullName>
        <active>true</active>
        <description>When creating a New Master PD</description>
        <errorConditionFormula>AND(
          (Master__c = TRUE),(Cloned_from_Master__c = FALSE) &amp;&amp;  IF( LEN( PD_Number__c ) &lt;&gt;4, TRUE,FALSE) 
)</errorConditionFormula>
        <errorDisplayField>PD_Number__c</errorDisplayField>
        <errorMessage>For Master PD please enter only 4 characters in PD Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PD_Region_Validation_for_Cloned_PD</fullName>
        <active>true</active>
        <description>When creating a Cloned Master PD</description>
        <errorConditionFormula>AND(
          (Master__c = TRUE),(Cloned_from_Master__c = TRUE) &amp;&amp;  ISPICKVAL( Regions__c ,&quot;&quot;) 
)</errorConditionFormula>
        <errorDisplayField>Regions__c</errorDisplayField>
        <errorMessage>Regional PD copied from Master, please select a Region</errorMessage>
    </validationRules>
</CustomObject>